src/objects/ffbf__BankFormatDefinition__c.object
<CustomObject>
    <fields>
        <fullName>ffbf__CSVOutput__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CSV Output</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ffbf__DoubleQuotes__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Double Quotes</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ffbf__ExternalId__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>32</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ffbf__UpperCase__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Upper Case</label>
        <type>Checkbox</type>
    </fields>
    <label>Bank Format Definition</label>
    <listViews>
        <fullName>ffbf__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Bank Format Definitions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>